refresh working on edit facilty page

--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -4,7 +4,7 @@
 	</div>
 	
 	<div class="pagecontent">
-		<div class="row">		
+		<div class="row" ng-init="editFaciltyDashboardInit();">
 			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
