Added camera dvr and user edit credentials

--- a/views/tmpl/admin/device/service-plan.html
+++ b/views/tmpl/admin/device/service-plan.html
@@ -128,7 +128,7 @@
 													<tr>
 														<th>Plan</th>
 														<th>Value</th>
-														<th class="ta-r">Price (in USA $)</th>
+														<th class="ta-r">Price (in $ USA)</th>
 													</tr>
 												</thead>
 												<tbody>
