--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -31,7 +31,7 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
 									<span class="text-lg">Devices</span>
 								</div>
 							</div>
@@ -52,7 +52,7 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
 									<span class="text-lg">Doors</span>
 								</div>
 							</div>
@@ -73,7 +73,7 @@
 							</div>
 							<div class="col-xs-6">
 								<div class="itxt">								
-									<p class="text-elg text-strong mt-5 mb-5">45</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
 									<span class="text-lg">Users</span>
 								</div>	
 							</div>
@@ -94,7 +94,7 @@
 									<div class="wrap-reset m-0"> 
 										<div class="profile-settings">
 											<div class="row pos-r mb-20">
-												<div class="col-sm-4 col-md-4">
+												<div class="col-sm-4 col-md-3">
 													<div class="gridlistbar ta-l">
 														<label class="control-label">No of Camera</label>
 														<span style="display: inline-block;" uib-dropdown on-toggle="toggled(open)">
@@ -126,7 +126,7 @@
 														<a href="" class="grid-icon" ng-class="{active: layout == 'sixcam'}" ng-click="changeaClass()"><i class="fa fa-th-large" aria-hidden="true" style="margin-right:-6px;"></i><i class="fa fa-th-large" aria-hidden="true"></i></a>
 													</div>
 												</div>
-												<div class="col-sm-4 col-md-4">
+												<!-- <div class="col-sm-4 col-md-4">
 													<div class="gridlistbar ta-c">
 														<a href="" uib-tooltip="Refreshes the connections"><i class="fa fa-refresh" aria-hidden="true"></i></a>
 														<a href="" uib-tooltip="Clears Live Feed"><i class="fa fa-eraser" aria-hidden="true"></i></a>
@@ -153,21 +153,37 @@
 														<a href="" ng-click="showConfirm($event)" uib-tooltip="Deletes the current camera group"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
 														<a href="" uib-tooltip="Makes the current camera group the default camera group"><i class="fa fa-home" aria-hidden="true"></i></a>
 													</div>
+												</div> -->
+												<div class="col-sm-4 col-md-5 gridlistbar ta-r">
+														<div style="width: 60%;display: none;margin-right: 10px;" id="camform">
+															<form>
+																<input type="" class="form-control" name="" style="display: inline-block; width: 70%;">
+																
+																<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" title="Submit" aria-label="Submit"><i class="fa fa-check" aria-hidden="true"></i></button>
+																<button type="button" ng-click="hidecamadd()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" title="Cancel" aria-label="Cancel"><i class="fa fa-times" aria-hidden="true"></i></button>
+															</form>
+														</div>
+														<button ng-click="showcamadd()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" editable-text="user.name">{{ camgroup.name || 'empty' }}</button>
 												</div>
-												<div class="col-sm-2 col-md-2 pull-right">
-													<div class="gridlistbar ta-r">
-														<select class="form-control">
-															<option selected>Select the camera group</option>
-															<option>Camera group 1</option>
-															<option>Camera group 2</option>
-															<option>Camera group 3</option>
-															<option>Camera group 4</option>
-															<option>Camera group 5</option>
-															<option>Camera group 6</option>
-															<option>Camera group 7</option>
-															<option>Camera group 8</option>
-															<option>Camera group 9</option>
-														</select>
+												<div class="col-sm-2 col-md-4 pull-right">
+													<div class="row gridlistbar">
+														<div class="col-sm-12 col-md-6">
+															<select class="form-control"><option>Select Facility</option>></select>
+														</div>
+														<div class="col-sm-12 col-md-6 ta-r">
+															<select class="form-control">
+																<option selected>Select the camera group</option>
+																<option>Camera group 1</option>
+																<option>Camera group 2</option>
+																<option>Camera group 3</option>
+																<option>Camera group 4</option>
+																<option>Camera group 5</option>
+																<option>Camera group 6</option>
+																<option>Camera group 7</option>
+																<option>Camera group 8</option>
+																<option>Camera group 9</option>
+															</select>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -177,9 +193,9 @@
 												</div>
 											</div>
 											<div ng-class="class">											
-												<div class="livevideo">
+												<div class="livevideo" ng-repeat="camera in cameras">
 													<div class="selectcam">
-														Camera 1
+														{{camera.camera_username}}
 														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
 															<a href uib-dropdown-toggle><i class="fa fa-caret-down" aria-hidden="true"></i></a>
 															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
@@ -194,145 +210,18 @@
 													</div>
 													<div class="video">
 														<div id="boundary">
-															<div id="vstage">
-																<video>
-																	<source src="http://localhost/elika/videos/mov_bbb.mp4" type="video/mp4">
-																	<source src="http://localhost/elika/videos/mov_bbb.ogg" type="video/ogg">
-																	<source src="http://localhost/elika/videos/mov_bbb.webm" type="video/webm">
-																	Your browser does not support HTML5 video.
-																</video>
-															</div>
-															<div id="controls">
-																<div id="change">
-																	<button class="volumeup"><i class="fa fa-volume-up favolumeup" aria-hidden="true"></i></button>
-																	<button class="zoomin"><i class="fa fa-plus fazoomin" aria-hidden="true"></i></button>
-																	<button class="left"><i class="fa fa-chevron-left faleft" aria-hidden="true"></i></button>
-																	<button class="right"><i class="fa fa-chevron-right faright" aria-hidden="true"></i></button>
-																	<button class="play">&#x0011;</button>
-																	<button class="up"><i class="fa fa-chevron-up faup" aria-hidden="true"></i></button>
-																	<button class="down"><i class="fa fa-chevron-down fadown" aria-hidden="true"></i></button>
-																	<button class="zoomout"><i class="fa fa-minus fazoomout" aria-hidden="true"></i></button>
-																	<button class="volumedown"><i class="fa fa-volume-down favolumedown" aria-hidden="true"></i></button>
+														
+																
+																<div class="content-absolute">
+																	<div id="vxg_media1" class="content">
+																	</div>
 																</div>
-															</div>
+															
 														</div>
 													</div>
-													<script>
-														$(document).ready(function(){
-															$('.play').click(function(){
-																$(this).parent('#change').addClass('widthinc');
-															});
-														});
-														(function(){
-														  var zoom = 1,
-															  rotate = 0;
-														  var vstage = document.getElementById('vstage'),
-															  v = document.getElementsByTagName('video')[0],
-															  controls = document.getElementById('controls');
-														  var properties = ['transform', 'WebkitTransform', 'MozTransform',
-																			'msTransform', 'OTransform'],
-															  prop = properties[0];  
-														  var i,j,t;
-														  for(i=0,j=properties.length;i<j;i++){
-															if(typeof vstage.style[properties[i]] !== 'undefined'){
-															  prop = properties[i];
-															  break;
-															}
-														  }
-														  v.style.left = 0;
-														  v.style.top = 0;
-														  controls.addEventListener('click',function(e){
-															t = e.target;
-															if(t.nodeName.toLowerCase()==='button' || t.nodeName.toLowerCase()==='i'){   
-															  switch(t.className){  
-																case 'play':
-																  if(v.paused){
-																	v.play();
-																	t.innerHTML = '&#x05C0;&#x05C0;';
-																  } else {
-																	v.pause();
-																	t.innerHTML = '&#x0011;';
-																  }
-																break;
-																
-																case 'zoomin':
-																  zoom = zoom + 0.1;
-																  v.style[prop]='scale('+zoom+') rotate('+rotate+'deg)';
-																break;												
-																case 'fa fa-plus fazoomin':
-																  zoom = zoom + 0.1;
-																  v.style[prop]='scale('+zoom+') rotate('+rotate+'deg)';
-																break;
-																
-																case 'zoomout':
-																  zoom = zoom - 0.1;
-																  v.style[prop]='scale('+zoom+') rotate('+rotate+'deg)';
-																break;												
-																case 'fa fa-minus fazoomout':
-																  zoom = zoom - 0.1;
-																  v.style[prop]='scale('+zoom+') rotate('+rotate+'deg)';
-																break;
-																
-																case 'rotateleft':
-																  rotate = rotate + 5;
-																  v.style[prop]='rotate('+rotate+'deg) scale('+zoom+')';
-																break;
-																
-																case 'rotateright':
-																  rotate = rotate - 5;
-																  v.style[prop]='rotate('+rotate+'deg) scale('+zoom+')';
-																break;
-																
-																case 'left':
-																  v.style.left = (parseInt(v.style.left,10) - 5) + 'px';
-																break;
-																case 'fa fa-chevron-left faleft':
-																  v.style.left = (parseInt(v.style.left,10) - 5) + 'px';
-																break;
-																
-																case 'right':
-																  v.style.left = (parseInt(v.style.left,10) + 5) + 'px';
-																break;
-																case 'fa fa-chevron-right faright':
-																  v.style.left = (parseInt(v.style.left,10) + 5) + 'px';
-																break;
-																
-																case 'up':
-																  v.style.top = (parseInt(v.style.top,10) - 5) + 'px';
-																break;
-																case 'fa fa-chevron-up faup':
-																  v.style.top = (parseInt(v.style.top,10) - 5) + 'px';
-																break;
-																
-																case 'down':
-																  v.style.top = (parseInt(v.style.top,10) + 5) + 'px';
-																break;
-																case 'fa fa-chevron-down fadown':
-																  v.style.top = (parseInt(v.style.top,10) + 5) + 'px';
-																break;
-																
-																case 'reset':
-																  zoom = 1;
-																  rotate = 0;
-																  v.style.top = 0 + 'px';
-																  v.style.left = 0 + 'px';
-																  v.style[prop]='rotate('+rotate+'deg) scale('+zoom+')';
-																break;
-																case 'fa fa-refresh farefresh':
-																  zoom = 1;
-																  rotate = 0;
-																  v.style.top = 0 + 'px';
-																  v.style.left = 0 + 'px';
-																  v.style[prop]='rotate('+rotate+'deg) scale('+zoom+')';
-																break;
-															  }
-															  e.preventDefault();
-															}
-														  },false);
-														})();
-													</script>
+													
 												</div>
-												<div class="livevideo">
+												<!-- <div class="livevideo">
 													<div class="selectcam">
 														No Camera Selected
 														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
@@ -426,12 +315,12 @@
 													<div class="video">
 														
 													</div>
-												</div>
+												</div> -->
 											</div>
 										</div>
 									</div>
 								</uib-tab>
-								<uib-tab heading="Recorded Feeds">
+								<!-- <uib-tab heading="Recorded Feeds">
 									<div class="wrap-reset"> 
 										<div class="profile-settings"> 
 											<div class="row">
@@ -512,9 +401,9 @@
 																	</div>
 																	<div class="video">
 																		<video controls>
-																			<source src="http://localhost/elika/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/videos/mov_bbb.webm" type="video/webm">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
 																			Your browser does not support HTML5 video.
 																		</video>
 																	</div>
@@ -526,9 +415,9 @@
 																	</div>
 																	<div class="video">
 																		<video controls>
-																			<source src="http://localhost/elika/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/videos/mov_bbb.webm" type="video/webm">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
 																			Your browser does not support HTML5 video.
 																		</video>
 																	</div>
@@ -540,9 +429,9 @@
 																	</div>
 																	<div class="video">
 																		<video controls>
-																			<source src="http://localhost/elika/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/videos/mov_bbb.webm" type="video/webm">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
 																			Your browser does not support HTML5 video.
 																		</video>
 																	</div>
@@ -554,9 +443,9 @@
 																	</div>
 																	<div class="video">
 																		<video controls>
-																			<source src="http://localhost/elika/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/videos/mov_bbb.webm" type="video/webm">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
 																			Your browser does not support HTML5 video.
 																		</video>
 																	</div>
@@ -568,9 +457,9 @@
 																	</div>
 																	<div class="video">
 																		<video controls>
-																			<source src="http://localhost/elika/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/videos/mov_bbb.webm" type="video/webm">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
+																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
 																			Your browser does not support HTML5 video.
 																		</video>
 																	</div>
@@ -584,7 +473,7 @@
 											</div>
 										</div>
 									</div>
-								</uib-tab>
+								</uib-tab> -->
 							</uib-tabset>
 						</div>
 					</div>
@@ -594,3 +483,63 @@
 		
 	</div>
 </div>
+<script>
+			var indexPlayer = 1;
+			function createPlayer(){
+				indexPlayer++;
+				var playerId = 'vxg_media_player' + indexPlayer;
+				var div = document.createElement('div');
+				div.setAttribute("id", playerId);
+				div.setAttribute("class", "vxgplayer");
+				var runtimePlayers = document.getElementById('runtimePlayers');
+				runtimePlayers.appendChild(div);
+				vxgplayer(playerId, {
+					url: '',
+					nmf_path: 'media_player.nmf',
+					nmf_src: '../../../scripts/pnacl/Release/media_player.nmf',
+					latency: 300000,
+					aspect_ratio_mode: 1,
+					autohide: 3,
+					controls: true,
+					avsync: true,
+					autoreconnect: 1
+					}).ready(function(){
+					vxgplayer(playerId).src(document.getElementById('url_input').value);
+					vxgplayer(playerId).play();
+				});
+			}
+
+			// Opera 8.0+
+			var isOpera = (!!window.opr && !!opr.addons) || !!window.opera || navigator.userAgent.indexOf(' OPR/') >= 0;
+			
+			// Firefox 1.0+
+			var isFirefox = typeof InstallTrigger !== 'undefined';
+			
+			// Safari 3.0+ "[object HTMLElementConstructor]" 
+			var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || safari.pushNotification);
+			
+			// Internet Explorer 6-11
+			var isIE = /*@cc_on!@*/false || !!document.documentMode;
+			
+			// Edge 20+
+			var isEdge = !isIE && !!window.StyleMedia;
+			
+			// Chrome 1+
+			var isChrome = !!window.chrome && !!window.chrome.webstore;
+			
+			// Blink engine detection
+			var isBlink = (isChrome || isOpera) && !!window.CSS;
+			if(!isChrome){
+				document.getElementById("vxg_media1").innerHTML = "<embed id='player' type='application/x-vlc-plugin' class='lv_player'  name='player' target='rtsp://mpv.cdn3.bigCDN.com:554/bigCDN/mp4:bigbuckbunnyiphone_400.mp4'   autoplay='yes'   loop='yes' toolbar=false  width='640' height='360' />";
+			}
+			else{
+				document.getElementById("vxg_media1").innerHTML = '<div id="vxg_media_player1" class="vxgplayer" url="rtsp://52.34.213.96:8554/serial1" aspect-ratio latency="3000000" autostart controls avsync></div>';
+				vxgplayer('vxg_media_player1').onReadyStateChange(function(onreadyState){
+					console.log("player LOADED: versionPLG=" + vxgplayer('vxg_media_player1').versionPLG()+" versionAPP="+vxgplayer('vxg_media_player1').versionAPP());
+					vxgplayer('vxg_media_player1').play();
+				});
+				vxgplayer('vxg_media_player1').onError(function(onErr){
+					console.log("player ERROR: " + vxgplayer('vxg_media_player1').error());
+				});
+			}
+		</script>
