--- a/views/tmpl/admin/schedule/holiday-schedules.html
+++ b/views/tmpl/admin/schedule/holiday-schedules.html
@@ -5,10 +5,10 @@
 	
 	<div class="pagecontent">
 		<div class="row">		
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
-						<div class="bg-transparent">
+						<div class="bg-transparent schedulebg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -18,58 +18,67 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">15</p>
-									<span class="text-lg">Primary Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
-					<a ui-sref="app.admin.device.dependent-devices">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-mobile fa-5x"></i>
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
+				<div class="card">
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">7</p>
-									<span class="text-lg">Dependent Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">95</p>
-									<span class="text-lg">Users</span>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">45</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -85,66 +94,89 @@
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
 										<div class="modal-header"><h4 class="modal-title custom-font">Create Holiday Schedule</h4></div>
-										<div class="modal-body">
-											<div class="account">
-												<div class="overflow">												
-													<div class="form-group">
-														<label for="">Schedule Name</label>
-														<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-													</div>												
-												</div>
-												<div class="overflow">
-													<div class="col-md-6 first">
-														<div class="form-group" ng-controller="DatepickerDemoCtrl">
-															<label for="">Start Date <small>(mm/dd/yyyy)</small></label>
-															<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
+										<div class="hometabs">
+											<div class="row">
+												<div class="col-md-9 pr-0" style="width: 920px;" ng-controller="CalendarCtrl">
+													<div class="tbox tbox-sm">
+														<div class="tcol w-md bg-tr-white lt b-r">
+															<div class="p-15 bg-white mt-10">
+																<button type="button" class="btn btn-greensea btn-xs mb-10 pull-right b-0" ng-click="addEvent()" uib-tooltip="Doule-click to calendar day to add event" tooltip-placement="bottom"><i class="fa fa-plus"></i></button>
+																<h4 class="custom-font text-default m-0">Schedule Groups</h4>
+															</div>
+															<div class="p-15" style="height: 440px; overflow-x: hidden; overflow-y: auto;">
+																<div ng-repeat="e in events" class="pl-10 mb-10 event-control {{e.className[0]}} b-2x b-greensea">
+																	<input ng-model="e.title" placeholder="Holiday/Schedule Name" class="form-control input-sm input-unstyled">
+																	<a class="pull-right text-muted event-remove" ng-click="remove($index)"><i class="fa fa-trash-o"></i></a>
+																	<div class="text-xs text-muted">{{e.start | date:"MMM dd"}} - {{e.end | date:"MMM dd"}}</div>
+																</div>
+															</div>
 														</div>
-													</div>
-													<div class="col-md-6 last">
-														<div class="form-group" ng-controller="DatepickerDemoCtrl">
-															<label for="">End Date <small>(mm/dd/yyyy)</small></label>
-															<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
-														</div>
-													</div>
-												</div>
-												<div class="overflow">
-													<div class="col-md-6 first">
-														<div class="form-group">
-															<label for="">Start Time <small>(HH:MM)</small></label>
-															<span ng-controller="TimepickerDemoCtrl">
-																<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-															</span>
-														</div>
-													</div>
-													<div class="col-md-6 last">
-														<div class="form-group">
-															<label for="">End Time <small>(HH:MM)</small></label>
-															<span ng-controller="TimepickerDemoCtrl">
-																<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-															</span>
+														<div class="tcol" style="width: 660px;">
+															<div class="p-15">
+																<div class="fc-overlay">
+																	<div class="panel b-solid">
+																		<h4 class="text-light mt-0">{{event.title}}</h4>
+																		<div class="b-b b-solid mb-10"></div>
+																		<div class="text-muted"><i class="icon-calendar mr-5"></i> {{event.start | date:'medium'}}</div>
+																		<div class="text-muted" ng-show='event.end'><i class="icon-clock mr-5"></i> {{event.end | date:'medium'}}</div>
+																		<div class="text-muted" ng-show='event.location'><i class="icon-pointer mr-5"></i> {{event.location}}</div>
+																		<div class="mt-10">{{event.info}}</div>
+																	</div>
+																</div>
+																<div class="calendar" ng-model="eventSources" calendar="myCalendar1" ui-calendar="uiConfig.calendar"></div>
+															</div>
 														</div>
 													</div>
 												</div>
-												<div class="overflow">
-													<div class="form-group">
-														<label for="">Days</label><br/>
-														<div class="btn-group btnrounded" ng-controller="DaysCtrl">
-															<label class="btn btn-default" ng-model="checkModel.Mo" uib-btn-checkbox>Mon</label>
-															<label class="btn btn-default" ng-model="checkModel.Tu" uib-btn-checkbox>Tue</label>
-															<label class="btn btn-default" ng-model="checkModel.We" uib-btn-checkbox>Wed</label>
-															<label class="btn btn-default" ng-model="checkModel.Th" uib-btn-checkbox>Thr</label>
-															<label class="btn btn-default" ng-model="checkModel.Fr" uib-btn-checkbox>Fri</label>
-															<label class="btn btn-default" ng-model="checkModel.Sa" uib-btn-checkbox>Sat</label>
-															<label class="btn btn-default" ng-model="checkModel.Su" uib-btn-checkbox>Sun</label>
+												<div class="col-md-3 pl-0 below1139">		
+													<div class="account" style="padding: 15px;">		
+														<div class="form-group row">
+															<div class="col-md-12">
+																<label for="">Schedule Name</label>
+																<input type="text" name="" id="" class="form-control" placeholder="">
+															</div>
+														</div>	
+														<div class="form-group row">
+															<div class="col-md-12" ng-controller="DatepickerDemoCtrl">
+																<label for="">Start Date</label>
+																<div class="input-group">
+																	<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+																	<span class="input-group-btn">
+																		<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+																	</span>
+																</div>
+															</div>
 														</div>
-													</div>
-												</div>
-												<div class="overflow" >
-													<div class="form-group">
-														<label for="">Status</label><br/>
-														<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+														<div class="form-group row">
+															<div class="col-md-12" ng-controller="DatepickerDemoCtrl">
+																<label for="">End Date</label>
+																<div class="input-group">
+																	<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+																	<span class="input-group-btn">
+																		<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+																	</span>
+																</div>
+															</div>
+														</div>
+														<div class="form-group row calstatus" ng-controller="ActivebtnCtrl">
+															<div class="col-md-12 mb-20">
+																<label for="">Status</label><br/>
+																<div class="btn-group btnrounded">
+																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
+																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+																</div>
+															</div>
+															<div class="col-md-12" ng-hide="radioModel=='Inactive'">
+																<div ng-controller="DatepickerDemoCtrl">
+																	<label for="">Expiration Date</label>
+																	<div class="input-group">
+																		<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+																		<span class="input-group-btn">
+																			<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+																		</span>
+																	</div>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -155,7 +187,7 @@
 											<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 										</div>
 									</script>
-									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Holiday Schedule</span></a>
+									<a ng-click="open('lg')" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Holiday Schedule</span></a>
 								</div>
 							</li>
 						</ul>
@@ -164,7 +196,7 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
-								<div class="col-md-4 filterorder">
+								<div class="col-sm-3 col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -178,11 +210,19 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
-									<button class="btn btn-default br-2-r" type="button">Search</button>
+								<div class="col-sm-6 col-md-6">
+									<div class="row">
+										<div class="col-sm-8 col-md-9 search">
+											<input type="text" class="form-control" placeholder="Search by text....">
+											<button class="btn btn-default br-2-r" type="button">Search</button>
+										</div>
+										<div class="col-sm-4 col-md-3 profilephoto csvupload">
+											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										</div>
+									</div>
 								</div>
-								<div class="col-md-4">
+								<div class="col-sm-3 col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -190,15 +230,15 @@
 									</div>
 								</div>
 								<div class="filterfields" ng-hide="filtershow">
-									<div class="col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fbtitle" class="control-label">Search by title</label>
 										<input type="text" class="form-control" id="fbtitle" ng-model="title">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fblocation" class="control-label">Search by Days</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="days">
 									</div>
@@ -221,7 +261,7 @@
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.schedule.view-holiday-schedule">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.schedule.view-holiday-schedule">Edit</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.schedule.edit-holiday-schedule">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
 											</div>
 										</md-card>										
