--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -102,7 +102,7 @@
 						<div class="mt-40">
 							<!--<a ui-sref="app.admin.device.device-settings({device_id:device_id})" class="btn btn-rounded-20 btn-sm btn-slategray">View Settings</a>-->
 							<!--<a ui-sref="app.admin.device.service-plan({device_id:device_id})" class="btn btn-rounded-20 btn-sm bg-slategray dk mr-5 ml-5">View Plan</a>-->
-							<a ng-click="showConfirm($event,device_id)" class="btn btn-rounded-20 btn-sm bg-danger">Delete Device</a>
+							<a ng-click="showConfirm($event,device_id,details.device_facility_id)" class="btn btn-rounded-20 btn-sm bg-danger">Delete Device</a>
 						</div>
 					</div> 
 					<div class="tile-body text-center bg-blue p-0"> 
@@ -151,19 +151,19 @@
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Facility</label>
-												<select type="text" name="facility_id" id="" ng-model="editDevice.device_facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList" class="form-control" placeholder="" required>
+												<select disabled type="text" name="facility_id" id="" ng-model="editDevice.device_facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList" class="form-control" placeholder="" required>
 													<option value="">Select</option>
 												</select>
 											</div>
 											<div class="col-sm-6 col-md-6">
 												<div class="row">
-													<div class="form-group col-sm-6 col-md-6 pr-0">
+													<!--<div class="form-group col-sm-6 col-md-6 pr-0">
 														<label for="">Device Type</label><br/>
-														<div class="btn-group btnrounded" ng-init="editDevice.device_type='slave'">
+														<div disabled class="btn-group btnrounded" ng-init="editDevice.device_type='slave'">
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'master'">Primary</label>
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'slave'">Dependent</label>
 														</div>
-													</div>
+													</div>-->
 													<div class="form-group col-sm-6 col-md-6 pl-0" ng-hide="editDevice.device_type=='master'">
 														<label for="">&nbsp;</label>
 														<select class="form-control" ng-options="item.device_id as item.device_name for item in deviceData track by item.device_id" ng-model="editDevice.device_master_id">
@@ -176,7 +176,7 @@
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Doors</label><br/><!--doorList-->
-												<select ng-model="editDevice.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
+												<select ng-model="editDevice.door_id" multiple chosen="{width: '100%'}" disabled ng-options="item.door_id as item.door_name for item in doorList">
 												</select>
 											</div>
 										
