--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -1,10 +1,10 @@
 <div class="page admin">
-	<div class="pageheader backpage">
+	<div class="pageheader backpage">		
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
 	</div>
-
-	<div class="pagecontent">
-		<div class="row">
+	
+	<div class="pagecontent">	
+		<div class="row">		
 			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
@@ -12,93 +12,93 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
-									<p>{{page.subtitle}}</p>
+									<p>{{page.subtitle}}</p>									
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>			
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">
-							<div class="row">
-								<div class="col-xs-6 ta-r">
-									<div class="iconbx">
-										<img src="images/device-icon.png" alt="">
-									</div>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-6">
-									<div class="itxt">
-										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
-										<span class="text-lg">Devices</span>
-									</div>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
+			</div>			
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.door.doors">
-						<div class="noback bg-slategray lt">
-							<div class="row">
-								<div class="col-xs-6 ta-r">
-									<div class="iconbx">
-										<img src="images/doors-icon.png" alt="">
-									</div>
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-6">
-									<div class="itxt">
-										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
-										<span class="text-lg">Doors</span>
-									</div>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
+			</div>			
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">
-							<div class="row">
-								<div class="col-xs-6 ta-r">
-									<div class="iconbx">
-										<img src="images/users-icon.png" alt="">
-									</div>
-								</div>
-								<div class="col-xs-6">
-									<div class="itxt">
-										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
-										<span class="text-lg">Users</span>
-									</div>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
+			</div>			
 		</div>
-
+		
 		<div class="row" ng-controller="CameraDVRCtrl">
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="hometabs">
 						<div id="camerandvr" class="table-custom">
-							<uib-tabset class="tabs-dark">
+							<uib-tabset class="tabs-dark"> 
 								<uib-tab heading="Live Feeds">
-									<div class="wrap-reset m-0">
+									<div class="wrap-reset m-0"> 
 										<div class="profile-settings">
 											<div class="row pos-r mb-20">
 												<div class="col-sm-4 col-md-3">
 													<div class="gridlistbar ta-l">
 														<label class="control-label">No of Camera</label>
 														<span style="display: inline-block;" uib-dropdown on-toggle="toggled(open)">
-															<a href uib-dropdown-toggle class="list-icon" ng-class="{active: layout == 'onecam'}"><i class="fa fa-stop" aria-hidden="true"></i></a>
+															<a href uib-dropdown-toggle class="list-icon" ng-class="{active: layout == 'onecam'}" ng-click="cameraInit(1,1)"><i class="fa fa-stop" aria-hidden="true"></i></a>
 															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
 																<li><a href="" ng-click="changedClass()">Camera 1</a></li>
 																<li><a href="" ng-click="changedClass()">Camera 2</a></li>
@@ -111,19 +111,19 @@
 														<span style="display: inline-block;" uib-dropdown on-toggle="toggled(open)">
 															<a href uib-dropdown-toggle class="list-icon" ng-class="{active: layout == 'twocam'}"><i class="fa fa-pause" aria-hidden="true"></i></a>
 															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
-																<li><a href="" ng-click="changecClass()">Camera 1-2</a></li>
-																<li><a href="" ng-click="changecClass()">Camera 3-4</a></li>
-																<li><a href="" ng-click="changecClass()">Camera 5-6</a></li>
+																<li><a href="" ng-click="cameraInit(1,2)">Camera 1-2</a></li>
+																<li><a href="" ng-click="cameraInit(3,2)">Camera 3-4</a></li>
+																<li><a href="" ng-click="cameraInit(5,2)">Camera 5-6</a></li>
 															</ul>
 														</span>
 														<span style="display: inline-block;" uib-dropdown on-toggle="toggled(open)">
 															<a href uib-dropdown-toggle class="list-icon" ng-class="{active: layout == 'fourcam'}"><i class="fa fa-th-large" aria-hidden="true"></i></a>
 															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
-																<li><a href="" ng-click="changebClass()">Camera 1-4</a></li>
-																<li><a href="" ng-click="changebClass()">Camera 2-6</a></li>
+																<li><a href="" ng-click="cameraInit(1,4)">Camera 1-4</a></li>
+																<li><a href="" ng-click="cameraInit(2,4)">Camera 2-6</a></li>
 															</ul>
 														</span>
-														<a href="" class="grid-icon" ng-class="{active: layout == 'sixcam'}" ng-click="changeaClass()"><i class="fa fa-th-large" aria-hidden="true" style="margin-right:-6px;"></i><i class="fa fa-th-large" aria-hidden="true"></i></a>
+														<a href="" class="grid-icon" ng-class="{active: layout == 'sixcam'}" ng-click="changeaClass()" ng-click="cameraInit(1,6)"><i class="fa fa-th-large" aria-hidden="true" style="margin-right:-6px;"></i><i class="fa fa-th-large" aria-hidden="true"></i></a>
 													</div>
 												</div>
 												<!-- <div class="col-sm-4 col-md-4">
@@ -154,17 +154,17 @@
 														<a href="" uib-tooltip="Makes the current camera group the default camera group"><i class="fa fa-home" aria-hidden="true"></i></a>
 													</div>
 												</div> -->
-												<div class="col-sm-4 col-md-5 gridlistbar ta-r">
-													<div style="width: 60%;display: none;margin-right: 10px;" id="camform">
-														<form>
-															<input type="" class="form-control" name="" style="display: inline-block; width: 70%;">
-
-															<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" title="Submit" aria-label="Submit"><i class="fa fa-check" aria-hidden="true"></i></button>
-															<button type="button" ng-click="hidecamadd()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" title="Cancel"
-															    aria-label="Cancel"><i class="fa fa-times" aria-hidden="true"></i></button>
-														</form>
-													</div>
-													<button ng-click="showcamadd()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" editable-text="user.name">{{ camgroup.name || 'empty' }}</button>
+												<div class="col-sm-4 col-md-5 gridlistbar ta-r">{{cam_group.camera_id}}
+														<div style="width: 60%;display: none;margin-right: 10px;" id="camform">
+															<form ng-submit="addCameraGroup(cam1group,camera_id)" name="cam_group">
+																<input type="hidden" ng-model="camera_id" name="" >
+																<input type="text" class="form-control" name="group_name" ng-model="cam1group.group_name" style="display: inline-block; width: 70%;" value="ew">
+																
+																<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" title="Submit" aria-label="Submit"><i class="fa fa-check" aria-hidden="true"></i></button>
+																<button type="button" ng-click="hidecamadd()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" title="Cancel" aria-label="Cancel"><i class="fa fa-times" aria-hidden="true"></i></button>
+															</form>
+														</div>
+														<button ng-click="showcamadd()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" editable-text="user.name">{{ camgroup.name || 'empty' }}</button>
 												</div>
 												<div class="col-sm-2 col-md-4 pull-right">
 													<div class="row gridlistbar">
@@ -188,15 +188,16 @@
 													</div>
 												</div>
 											</div>
-											<div ng-if="result">
-												<div layout="row" ng-class="statusclass">
+											<div ng-if="result">									
+												<div layout="row" ng-class="statusclass">									
 													{{result}}
 												</div>
 											</div>
-											<div ng-class="class">
+											<div ng-class="class">										
 												<div class="livevideo" ng-repeat="camera in cameras">
 													<div class="selectcam">
-														{{camera.camera_username}}
+														{{camera.camera_username}}{{camera.camera_id}}
+
 														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
 															<a href uib-dropdown-toggle><i class="fa fa-caret-down" aria-hidden="true"></i></a>
 															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
@@ -209,18 +210,18 @@
 															</ul>
 														</label>
 													</div>
-
-												</div>
-												<div class="video">
-													<div id="boundary">
-
-
-														<div class="content-absolute">
-															<div id="vxg_media1" class="content">
-															</div>
+													<div class="video">
+														<div id="boundary">
+														
+																
+																<div class="content-absolute">
+																	<div id="vxg_media1" class="content">
+																	</div>
+																</div>
+															
 														</div>
-
 													</div>
+													
 												</div>
 												<!-- <div class="livevideo">
 													<div class="selectcam">
@@ -480,46 +481,67 @@
 					</div>
 				</section>
 			</div>
-		</div>
-
+		</div>	
+		
 	</div>
 </div>
 <script>
-	// Opera 8.0+
-	var isOpera = (!!window.opr && !!opr.addons) || !!window.opera || navigator.userAgent.indexOf(' OPR/') >= 0;
+			var indexPlayer = 1;
+			function createPlayer(){
+				indexPlayer++;
+				var playerId = 'vxg_media_player' + indexPlayer;
+				var div = document.createElement('div');
+				div.setAttribute("id", playerId);
+				div.setAttribute("class", "vxgplayer");
+				var runtimePlayers = document.getElementById('runtimePlayers');
+				runtimePlayers.appendChild(div);
+				vxgplayer(playerId, {
+					url: '',
+					nmf_path: 'media_player.nmf',
+					nmf_src: '../../../scripts/pnacl/Release/media_player.nmf',
+					latency: 300000,
+					aspect_ratio_mode: 1,
+					autohide: 3,
+					controls: true,
+					avsync: true,
+					autoreconnect: 1
+					}).ready(function(){
+					vxgplayer(playerId).src(document.getElementById('url_input').value);
+					vxgplayer(playerId).play();
+				});
+			}
 
-	// Firefox 1.0+
-	var isFirefox = typeof InstallTrigger !== 'undefined';
-
-	// Safari 3.0+ "[object HTMLElementConstructor]" 
-	var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) {
-		return p.toString() === "[object SafariRemoteNotification]";
-	})(!window['safari'] || safari.pushNotification);
-
-	// Internet Explorer 6-11
-	var isIE = /*@cc_on!@*/ false || !!document.documentMode;
-
-	// Edge 20+
-	var isEdge = !isIE && !!window.StyleMedia;
-
-	// Chrome 1+
-	var isChrome = !!window.chrome && !!window.chrome.webstore;
-	setTimeout(function(){vxgplayer('vxg_media_player1').onReadyStateChange(function (onreadyState) {
-			console.log("player LOADED: versionPLG=" + vxgplayer('vxg_media_player1').versionPLG() + " versionAPP=" +
-				vxgplayer('vxg_media_player1').versionAPP());
-			vxgplayer('vxg_media_player1').play();
-		});
-		vxgplayer('vxg_media_player1').onError(function (onErr) {
-			console.log("player ERROR: " + vxgplayer('vxg_media_player1').error());
-		});
-	},2000);
-	// Blink engine detection
-	var isBlink = (isChrome || isOpera) && !!window.CSS;
-	if (!isChrome) {
-		document.getElementById("vxg_media1").innerHTML =
-			"<embed id='player' type='application/x-vlc-plugin' class='lv_player'  name='player' target='rtsp://mpv.cdn3.bigCDN.com:554/bigCDN/mp4:bigbuckbunnyiphone_400.mp4'   autoplay='yes'   loop='yes' toolbar=false  width='640' height='360' />";
-	} else {
-		document.getElementById("vxg_media1").innerHTML =
-			'<div id="vxg_media_player1" class="vxgplayer" url="rtsp://mpv.cdn3.bigCDN.com:554/bigCDN/mp4:bigbuckbunnyiphone_400.mp4" aspect-ratio latency="3000000" autostart controls avsync></div>';
-	}
-</script>
+			// Opera 8.0+
+			var isOpera = (!!window.opr && !!opr.addons) || !!window.opera || navigator.userAgent.indexOf(' OPR/') >= 0;
+			
+			// Firefox 1.0+
+			var isFirefox = typeof InstallTrigger !== 'undefined';
+			
+			// Safari 3.0+ "[object HTMLElementConstructor]" 
+			var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || safari.pushNotification);
+			
+			// Internet Explorer 6-11
+			var isIE = /*@cc_on!@*/false || !!document.documentMode;
+			
+			// Edge 20+
+			var isEdge = !isIE && !!window.StyleMedia;
+			
+			// Chrome 1+
+			var isChrome = !!window.chrome && !!window.chrome.webstore;
+			
+			// Blink engine detection
+			var isBlink = (isChrome || isOpera) && !!window.CSS;
+			if(!isChrome){
+				document.getElementById("vxg_media1").innerHTML = "<embed id='player' type='application/x-vlc-plugin' class='lv_player'  name='player' target='rtsp://mpv.cdn3.bigCDN.com:554/bigCDN/mp4:bigbuckbunnyiphone_400.mp4'   autoplay='yes'   loop='yes' toolbar=false  width='640' height='360' />";
+			}
+			else{
+				document.getElementById("vxg_media1").innerHTML = '<div id="vxg_media_player1" class="vxgplayer" url="rtsp://52.34.213.96:8554/serial03" aspect-ratio latency="3000000" autostart controls avsync></div>';
+				vxgplayer('vxg_media_player1').onReadyStateChange(function(onreadyState){
+					console.log("player LOADED: versionPLG=" + vxgplayer('vxg_media_player1').versionPLG()+" versionAPP="+vxgplayer('vxg_media_player1').versionAPP());
+					vxgplayer('vxg_media_player1').play();
+				});
+				vxgplayer('vxg_media_player1').onError(function(onErr){
+					console.log("player ERROR: " + vxgplayer('vxg_media_player1').error());
+				});
+			}
+		</script>
