changes at line number 97 in CameraDvr.js
Download plugin link in safari

--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -213,271 +213,21 @@
 															</ul>
 														</label>
 													</div>
-													<div class="video">
-														<div id="boundary">
+												</div>
+												<div class="video">
+													<div id="boundary">
 
-															<div class="content-absolute">
-																<div id="vxg_media1" class="content">
-																</div>
+														<div class="content-absolute">
+															<div id="vxg_media1" class="content">
 															</div>
-
 														</div>
-													</div>
 
-												</div>
-												<!-- <div class="livevideo">
-													<div class="selectcam">
-														No Camera Selected
-														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
-															<a href uib-dropdown-toggle><i class="fa fa-caret-down" aria-hidden="true"></i></a>
-															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
-																<li><a href="">Camera 1</a></li>
-																<li><a href="">Camera 2</a></li>
-																<li><a href="">Camera 3</a></li>
-																<li><a href="">Camera 4</a></li>
-																<li><a href="">Camera 5</a></li>
-																<li><a href="">Camera 6</a></li>
-															</ul>
-														</label>
-													</div>
-													<div class="video">
-														
 													</div>
 												</div>
-												<div class="livevideo">
-													<div class="selectcam">
-														No Camera Selected
-														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
-															<a href uib-dropdown-toggle><i class="fa fa-caret-down" aria-hidden="true"></i></a>
-															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
-																<li><a href="">Camera 1</a></li>
-																<li><a href="">Camera 2</a></li>
-																<li><a href="">Camera 3</a></li>
-																<li><a href="">Camera 4</a></li>
-																<li><a href="">Camera 5</a></li>
-																<li><a href="">Camera 6</a></li>
-															</ul>
-														</label>
-													</div>
-													<div class="video">
-														
-													</div>
-												</div>
-												<div class="livevideo">
-													<div class="selectcam">
-														No Camera Selected
-														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
-															<a href uib-dropdown-toggle><i class="fa fa-caret-down" aria-hidden="true"></i></a>
-															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
-																<li><a href="">Camera 1</a></li>
-																<li><a href="">Camera 2</a></li>
-																<li><a href="">Camera 3</a></li>
-																<li><a href="">Camera 4</a></li>
-																<li><a href="">Camera 5</a></li>
-																<li><a href="">Camera 6</a></li>
-															</ul>
-														</label>
-													</div>
-													<div class="video">
-														
-													</div>
-												</div>
-												<div class="livevideo">
-													<div class="selectcam">
-														No Camera Selected
-														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
-															<a href uib-dropdown-toggle><i class="fa fa-caret-down" aria-hidden="true"></i></a>
-															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
-																<li><a href="">Camera 1</a></li>
-																<li><a href="">Camera 2</a></li>
-																<li><a href="">Camera 3</a></li>
-																<li><a href="">Camera 4</a></li>
-																<li><a href="">Camera 5</a></li>
-																<li><a href="">Camera 6</a></li>
-															</ul>
-														</label>
-													</div>
-													<div class="video">
-														
-													</div>
-												</div>
-												<div class="livevideo">
-													<div class="selectcam">
-														No Camera Selected
-														<label class="control-label pull-right" uib-dropdown on-toggle="toggled(open)">
-															<a href uib-dropdown-toggle><i class="fa fa-caret-down" aria-hidden="true"></i></a>
-															<ul class="dropdown-menu with-arrow animated littleFadeInRight">
-																<li><a href="">Camera 1</a></li>
-																<li><a href="">Camera 2</a></li>
-																<li><a href="">Camera 3</a></li>
-																<li><a href="">Camera 4</a></li>
-																<li><a href="">Camera 5</a></li>
-																<li><a href="">Camera 6</a></li>
-															</ul>
-														</label>
-													</div>
-													<div class="video">
-														
-													</div>
-												</div> -->
 											</div>
 										</div>
 									</div>
 								</uib-tab>
-								<!-- <uib-tab heading="Recorded Feeds">
-									<div class="wrap-reset"> 
-										<div class="profile-settings"> 
-											<div class="row">
-												<div class="col-sm-12 col-md-9 col-centered">
-													<div class="col-sm-3 col-md-3">
-														<label for="">Facility</label><br/>
-														<select class="form-control" disabled>
-															<option selected>USA Corporate Services</option>
-															<option>Aerzen USA Corporation</option>
-															<option>Aerzen USA Corporation</option>
-															<option>Aerzen USA Corporation</option>
-															<option>Aerzen USA Corporation</option>
-															<option>Aerzen USA Corporation</option>
-														</select>
-													</div>
-													<div class="col-sm-3 col-md-3" ng-controller="DatepickerDemoCtrl">
-														<label for="">Date</label>
-														<div class="input-group">
-															<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-															<span class="input-group-btn">
-																<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
-															</span>
-														</div>
-													</div>
-													<div class="col-sm-3 col-md-3 validtime">
-														<label for="">Time <small>(Includes 10 min before & after)</small></label>
-														<span ng-controller="TimepickerDemoCtrl">
-															<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-														</span>
-													</div>
-													<div class="col-sm-3 col-md-3 validtime" ng-init="searchSection='reset'">
-														<label for="">&nbsp;</label><br/>
-														<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" ng-model="searchSection" ng-click="searchSection = 'search'">Search</button>
-														<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a" ng-click="searchSection = 'reset'">Reset</button>
-													</div>
-												</div>
-											</div>
-											<div class="row searchvideoitems" ng-init="searchSection = 'reset'">
-												<div class="col-md-12" ng-hide="searchSection == 'reset'">
-													<div class="row">
-														<div class="col-md-4">
-															<ul class="tabs-menu">
-																<li class="searchitems active">
-																	<a href="#gstab1" native-tab>
-																		Main Entrance Camera
-																		<small>Front Entrance (Bethesda)</small>
-																	</a>
-																</li>
-																<li class="searchitems">
-																	<a href="#gstab2" native-tab>
-																		Entrance to Hall
-																	</a>
-																</li>
-																<li class="searchitems">
-																	<a href="#gstab3" native-tab>
-																		Klva and Smart
-																		<small>01/01 General Entrance</small>
-																	</a>
-																</li>
-																<li class="searchitems">
-																	<a href="#gstab4" native-tab>
-																		Lobby Area
-																	</a>
-																</li>
-																<li class="searchitems">
-																	<a href="#gstab5" native-tab>
-																		Lobby Entrance
-																		<small>South Lobby Entrance</small>
-																	</a>
-																</li>
-															</ul>
-														</div>
-														<div class="col-md-8">
-															<div class="tab-content">												
-																<div class="livevideo tab-pane fade in active" id="gstab1">
-																	<div class="selectcam">
-																		Main Entrance Camera <small>Front Entrance (Bethesda)</small>
-																	</div>
-																	<div class="video">
-																		<video controls>
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
-																			Your browser does not support HTML5 video.
-																		</video>
-																	</div>
-																</div>
-																
-																<div class="livevideo tab-pane fade" id="gstab2">
-																	<div class="selectcam">
-																		Entrance to Hall
-																	</div>
-																	<div class="video">
-																		<video controls>
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
-																			Your browser does not support HTML5 video.
-																		</video>
-																	</div>
-																</div>
-																
-																<div class="livevideo tab-pane fade" id="gstab3">
-																	<div class="selectcam">
-																		Klva and Smart <small>01/01 General Entrance</small>
-																	</div>
-																	<div class="video">
-																		<video controls>
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
-																			Your browser does not support HTML5 video.
-																		</video>
-																	</div>
-																</div>
-																
-																<div class="livevideo tab-pane fade" id="gstab4">
-																	<div class="selectcam">
-																		Lobby Area
-																	</div>
-																	<div class="video">
-																		<video controls>
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
-																			Your browser does not support HTML5 video.
-																		</video>
-																	</div>
-																</div>
-																
-																<div class="livevideo tab-pane fade" id="gstab5">
-																	<div class="selectcam">
-																		Lobby Entrance <small>South Lobby Entrance</small>
-																	</div>
-																	<div class="video">
-																		<video controls>
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.mp4" type="video/mp4">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.ogg" type="video/ogg">
-																			<source src="http://localhost/elika/elika_webapp2_dev_ui/videos/mov_bbb.webm" type="video/webm">
-																			Your browser does not support HTML5 video.
-																		</video>
-																	</div>
-																</div>
-																
-															</div>
-														</div>
-													</div>
-													
-												</div>
-											</div>
-										</div>
-									</div>
-								</uib-tab> -->
 							</uib-tabset>
 						</div>
 					</div>
@@ -488,25 +238,63 @@
 	</div>
 </div>
 <script>
+	// Opera 8.0+
+	var isOpera = (!!window.opr && !!opr.addons) || !!window.opera || navigator.userAgent.indexOf(' OPR/') >= 0;
+
+	// Firefox 1.0+
+	var isFirefox = typeof InstallTrigger !== 'undefined';
+
+	// Safari 3.0+ "[object HTMLElementConstructor]" 
+	var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) {
+		return p.toString() === "[object SafariRemoteNotification]";
+	})(!window['safari'] || safari.pushNotification);
+
+	// Internet Explorer 6-11
+	var isIE = /*@cc_on!@*/ false || !!document.documentMode;
+
+	// Edge 20+
+	var isEdge = !isIE && !!window.StyleMedia;
+
 	// Chrome 1+
 	var isChrome = !!window.chrome && !!window.chrome.webstore;
-	setTimeout(function () {
-		vxgplayer('vxg_media_player1').onReadyStateChange(function (onreadyState) {
-			console.log("player LOADED: versionPLG=" + vxgplayer('vxg_media_player1').versionPLG() + " versionAPP=" +
-				vxgplayer('vxg_media_player1').versionAPP());
-			vxgplayer('vxg_media_player1').play();
-		});
-		vxgplayer('vxg_media_player1').onError(function (onErr) {
-			console.log("player ERROR: " + vxgplayer('vxg_media_player1').error());
-		});
-	}, 2000);
+
 	// Blink engine detection
 	var isBlink = (isChrome || isOpera) && !!window.CSS;
-	if (!isChrome) {
-		document.getElementById("vxg_media1").innerHTML =
-			"<embed id='player' type='application/x-vlc-plugin' class='lv_player'  name='player' target='rtsp://mpv.cdn3.bigCDN.com:554/bigCDN/mp4:bigbuckbunnyiphone_400.mp4'   autoplay='yes'   loop='yes' toolbar=false  width='100%' height='480' />";
-	} else {
+	var isChrome = !!window.chrome && !!window.chrome.webstore;
+	// Blink engine detection
+	var isBlink = (isChrome || isOpera) && !!window.CSS;
+	if (isSafari) {
+		var vlc = 0;
+		for (var i = 0; i < navigator.plugins.length; i++) {
+			var plugin = navigator.plugins;
+			console.log(plugin[4][1].type);
+			for (var j = 0; j < plugin[i].length; j++) {
+				if (plugin[i][j].type == "application/x-vlc-plugin") {
+					vlc = 1;
+				}
+			}
+		}
+		if (vlc == 1) {
+			document.getElementById("vxg_media1").innerHTML =
+				"<embed id='player' type='application/x-vlc-plugin' class='lv_player'  name='player' target='rtsp://mpv.cdn3.bigCDN.com:554/bigCDN/mp4:bigbuckbunnyiphone_400.mp4'   autoplay='yes'   loop='yes' toolbar=false  width='100%' height='480' />";
+		} else {
+			document.getElementById("vxg_media1").innerHTML =
+				'<a class="btn" href="http://35.162.244.123:8080/installPlugin.command">Click Here to download Plugin</a>'
+		}
+	} else if(isChrome) {
 		document.getElementById("vxg_media1").innerHTML =
 			'<div id="vxg_media_player1" class="vxgplayer" url="rtsp://mpv.cdn3.bigCDN.com:554/bigCDN/mp4:bigbuckbunnyiphone_400.mp4" aspect-ratio latency="3000000" autostart controls avsync></div>';
+		setTimeout(function () {
+			vxgplayer('vxg_media_player1').onReadyStateChange(function (onreadyState) {
+				console.log("player LOADED: versionPLG=" + vxgplayer('vxg_media_player1').versionPLG() + " versionAPP=" +
+					vxgplayer('vxg_media_player1').versionAPP());
+				vxgplayer('vxg_media_player1').play();
+			});
+			vxgplayer('vxg_media_player1').onError(function (onErr) {
+				console.log("player ERROR: " + vxgplayer('vxg_media_player1').error());
+			});
+		}, 2000);
+	}else{		
+		document.getElementById("vxg_media1").innerHTML ='<a>Browser not supported</a>';
 	}
 </script>
