Loader Dependent devices and settings

--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -183,7 +183,7 @@
 											<div class="form-group col-sm-6 col-md-6" >
 												<label for="">Technician</label><br/>
 												
-												<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"  ng-model="editDevice.technician_id" required>
+												<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList"  ng-model="editDevice.technician_id" required>
 													<option value="">Select</option>
 												</select>
 												<small class="pull-right" style="margin-bottom:-5px;"><a ui-sref="app.admin.support.technician">Add Technician</a></small>
