--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -66,14 +66,13 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Model</label><br/>
-														
 														<select name="device_model" ng-model="device.device_model" class="form-control" ng-options="model for model in deviceModel" required>
 															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Account Number/ICCID</label>
-														<input type="text" name="" id="" ng-model="device.account_no" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
+														<input type="text" name="" id="" ng-model="device.account_no" class="form-control" maxlength="10" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
 													</div>
 												</div>
 												<div class="row">
@@ -89,12 +88,12 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Phone Number</label>
-														<input type="text" name="" id="" class="form-control" ng-model="device.phone_no" maxlength="15" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
+														<input type="text" name="" id="" class="form-control" ng-model="device.phone_no" pattern="^(?:(?:\+|0{0,2})91(\s*[\-]\s*)?|[0]?)?[789]\d{9}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
 													</div>
-													<div class="form-group col-sm-6 col-md-6">
+													<!-- <div class="form-group col-sm-6 col-md-6">
 														<label for="">Bluetooth Mac Id</label>
-														<input type="text" name="" id="" class="form-control" ng-model="device.mac_address" placeholder="">
-													</div>
+														<input type="text" name="" id="" class="form-control" ng-model="device.mac_address" pattern="^([0-9A-F]{2}[:-]){5}([0-9A-F]{2})$" oninvalid="setCustomValidity('Please enter valid mac address')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="">
+													</div> -->
 												</div>
 												<div class="row">
 													<div class="col-sm-12 col-md-12">
