--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -93,28 +93,25 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form ng-validate="validationOptions" id="device_form" name="device_form" role="form">
+										<form name="device_form" ng-validate="validationOptions" id="device_form" role="form">
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Configuration Device</h4></div>
 											<div class="modal-body mt-5">
 												<div class="row">
-													<div class="form-group col-sm-6 col-md-6">
+													<div class="form-group col-sm-12 col-md-12">
 														<label for="">Device Name</label>
-														<input type="text" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required>
+														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required>
 													</div>
-													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Model Name</label>
-														<input type="text" name="" id="" ng-model="device.device_model" class="form-control" placeholder="" required>
-													</div>
+													
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number</label>
-														<input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" disabled required>
+														<input type="text" maxlength="20" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
 														<!-- <input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required> -->
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
-														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" disabled placeholder="" required>
+														<input type="text" maxlength="30" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
 														<!-- <input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required> -->
 													</div>
 												</div>
@@ -129,7 +126,7 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">&nbsp;</label>
 														<select class="form-control" ng-hide="device.device_type=='master'" ng-model="device.device_master_id" ng-options="item.device_id as item.device_name for item in deviceList">
-															<option value="">Select Primary Device</option>
+															<option>Select Primary Device</option>
 														</select>
 													</div>
 												</div>
@@ -137,8 +134,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Facility</label><br/>
-														<!-- <input type="text" class="form-control" value="{{FacilityName}}" disabled/> -->
-														<select class="form-control" ng-model="device.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList" required>
+														<select class="form-control" ng-model="device.facility_id" ng-change="getDoorsList()" ng-options="item.facility_id as item.facility_name for item in facilityList">
 															<option value="">Select</option>
 														</select>
 													</div>
@@ -154,14 +150,14 @@
 												<div class="row">
 													<div class="col-md-12">
 														<label for="">Doors</label><br/><!--doorList-->
-														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList" required>
+														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
 														</select>
 													</div>
 												</div>
 											</div>
 											<div class="modal-footer">
-												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
-												<button  ng-click="formSubmit(device,device_form)" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+												<button ng-click="formSubmit(device,device_form)" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
 									</script>
@@ -260,7 +256,7 @@
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-hide="hideLoadMore" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
