--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -107,12 +107,10 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number</label>
 														<input type="text" maxlength="20" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
-														<!-- <input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required> -->
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
 														<input type="text" maxlength="30" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
-														<!-- <input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required> -->
 													</div>
 												</div>
 												<div class="row" >
@@ -264,7 +262,7 @@
 										<md-card ng-repeat="device in data">
 											<span class="moreitemsondevice">
 												<a ui-sref="app.admin.device.service-plan"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-												<a ui-sref="app.admin.settings({device_id:device.device_id})"><i class="fa fa-cog" aria-hidden="true"></i></a>
+												<a ui-sref="app.admin.device.device-settings({device_id:device.device_id})"><i class="fa fa-cog" aria-hidden="true"></i></a>
 											</span>
 											<a ui-sref="app.admin.device.device-details({device_id:device.device_id})"><img ng-src="images/device/elika-76-bronze.png" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
