--- a/views/tmpl/admin/facility/view-facility.html
+++ b/views/tmpl/admin/facility/view-facility.html
@@ -142,7 +142,7 @@
 									<p><label>Location</label> {{facility.facility_location}}</p>
 									<p><label>Time Zone</label> {{facility.facility_timezone}}</p>
 									<p><label>Zip Code</label> {{facility.facility_zipcode}}</p>
-									<p><label>Status</label> {{facility.facility_status}}</p>
+									<p><label>Status</label> {{facility.facility_status | facilityStatus}}</p>
 									<p><label>Device</label> {{facility.facility_device_count|emptyVal}}</p>
 									<p><label>Users</label> {{facility.facility_user_count|emptyVal}}</p>
 									<p><label>Doors</label> {{facility.facility_Door_count|emptyVal}}</p>
