blue thooth in warehouse

--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -125,10 +125,10 @@
 										<label for="">Phone Number</label>
 										<input type="text" name="" id="" class="form-control" ng-model="device.device_phone_no" pattern="^(?:(?:\+|0{0,2})91(\s*[\-]\s*)?|[0]?)?[789]\d{9}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
 									</div>
-									<!-- <div class="form-group col-sm-6 col-md-6">
+									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Bluetooth Mac Id</label>
 										<input type="text" name="" id="" class="form-control" ng-model="device.device_mac_address" pattern="^([0-9A-F]{2}[:-]){5}([0-9A-F]{2})$" oninvalid="setCustomValidity('Please enter valid mac address')" onchange="try{setCustomValidity('')}catch(e){}" disabled>
-									</div> -->
+									</div>
 								</div>
 								<div class="row">
 									<div class="col-sm-12 col-md-12">
