--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -12,7 +12,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
-									<p>{{page.subtitle}}</p>									
+									<!--<p>{{page.subtitle}}</p>-->									
 								</div>
 							</div>
 						</div>
@@ -107,12 +107,10 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number</label>
 														<input type="text" maxlength="20" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
-														<!-- <input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required> -->
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
 														<input type="text" maxlength="30" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
-														<!-- <input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required> -->
 													</div>
 												</div>
 												<div class="row" >
@@ -219,20 +217,6 @@
 										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
 									</div>
 								</div>
-								<!--<div class="filterfields" ng-hide="filtershow">
-									<div class="col-sm-4 col-md-3">
-										<label for="fbtext" class="control-label">Search by text</label> 
-										<input type="text" class="form-control" id="fbtext" ng-model="text">
-									</div>
-									<div class="col-sm-4 col-md-3">
-										<label for="fbtitle" class="control-label">Search by title</label>
-										<input type="text" class="form-control" id="fbtitle" ng-model="title">
-									</div>
-									<div class="col-sm-4 col-md-3">
-										<label for="fblocation" class="control-label">Search by facility</label>
-										<input type="text" class="form-control" id="fblocation" ng-model="facility">
-									</div>
-								</div>-->
 							</div>
 							<div ng-if="result">									
 								<div layout="row" ng-class="statusclass">									
@@ -251,7 +235,7 @@
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.view-dependent-device({device_id:device.device_id})">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.view-dependent-device({device_id:device.device_id})">Edit</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.edit-device({device_id:device.device_id})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm(device.device_id,$event)">Delete</a>
 											</div>
 										</md-card>										
