--- a/views/tmpl/admin/device/edit-dependent-device.html
+++ b/views/tmpl/admin/device/edit-dependent-device.html
@@ -12,7 +12,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
-									<p>{{page.subtitle}}</p>									
+									<!--<p>{{page.subtitle}}</p>-->									
 								</div>
 							</div>
 						</div>
