--- a/views/tmpl/admin/device/view-device.html
+++ b/views/tmpl/admin/device/view-device.html
@@ -12,7 +12,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
-									<p>{{page.subtitle}}</p>									
+									<!--<p>{{page.subtitle}}</p>-->									
 								</div>
 							</div>
 						</div>
@@ -218,8 +218,7 @@
 															<p>{{ device.device_model }}</p>
 														</md-card-content>
 														<div class="md-actions" layout="row" layout-align="center center">
-															<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.dependent-devices-details({device_id:device.device_id})">View</a>
-															<!--a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Remove</a-->
+															<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.view-dependent-device({device_id:device.device_id})">View</a>
 														</div>
 													</md-card>
 												</md-content>
